src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Abutment_commitment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Abutment commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abutment_commitment_formula__c</fullName>
        <formula>Abutment_commitment_perc__c *  Implant_commitment_abs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abutment commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abutment_commitment_perc__c</fullName>
        <formula>IF(ISPICKVAL(Abutment_commitment_pick__c, &quot;&gt;80% of implants commitment&quot;), 0.90, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abutment commitment (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abutment_commitment_pick__c</fullName>
        <label>Abutment commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>≤80% of implants commitment</fullName>
                    <label>&lt;80% of implants commitment</label>
                </value>
                <value>
                    <fullName>&gt;80% of implants commitment</fullName>
                    <label>≥80% of implants commitment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Movex__c</fullName>
        <description>Used as help field in reports etc</description>
        <formula>Account.Movex__c</formula>
        <label>Account Movex#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_commitment_materials__c</fullName>
        <formula>Ordered_Within_Agreement__c /  Implant_volume_L12M__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual commitment, Implants</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AdditionalDiscount__c</fullName>
        <label>Additional Discount (%)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Model__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreed_Unit_Price_UK__c</fullName>
        <description>The Agreed unit price for the implant. For UK only</description>
        <inlineHelpText>The Agreed unit price for the implant. For UK only</inlineHelpText>
        <label>Agreed Unit Price (UK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_Implants_equipment__c</fullName>
        <label>Allowed discount Implants: equipment</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_Implants_equipment_form__c</fullName>
        <formula>Allowed_discount_Implants_equipment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount Implants: equipment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_Implants_materials__c</fullName>
        <label>Allowed discount Implants: materials</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_Implants_materials_form__c</fullName>
        <formula>Allowed_discount_Implants_materials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount Implants: materials</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_abutment_equipment__c</fullName>
        <label>Allowed discount abutment: equipment</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_abutment_equipment_form__c</fullName>
        <formula>Allowed_discount_abutment_equipment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount abutments: equipment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_abutment_materials__c</fullName>
        <label>Allowed discount abutment: materials</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_abutments_material_form__c</fullName>
        <formula>Allowed_discount_abutment_materials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount abutments: materials</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_equipment__c</fullName>
        <formula>IF(Allowed_discount_Implants_equipment__c +  Allowed_discount_revenue_equipments__c + Allowed_discount_abutment_equipment__c &gt; 0, Allowed_discount_Implants_equipment__c +  Allowed_discount_revenue_equipments__c + Allowed_discount_abutment_equipment__c +  Allowed_discount_pooling_equipment__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount, equipment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_materials__c</fullName>
        <formula>IF(Allowed_discount_Implants_materials__c +  Allowed_discount_revenue_materials__c +  Allowed_discount_abutment_materials__c &gt; 0, Allowed_discount_Implants_materials__c +  Allowed_discount_revenue_materials__c +  Allowed_discount_abutment_materials__c +  Allowed_discount_pooling_materials__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount, materials</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_matrix__c</fullName>
        <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=0150J0000045TWE&apos;, &apos;Übersicht erlaubter Rabattkombinationen&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount matrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_pooling_equipment__c</fullName>
        <label>Allowed discount pooling, equipment</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_pooling_equipment_form__c</fullName>
        <formula>Allowed_discount_pooling_equipment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount pooling, equipment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_pooling_materials__c</fullName>
        <label>Allowed discount pooling, materials</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_pooling_materials_form__c</fullName>
        <formula>Allowed_discount_pooling_materials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount pooling, materials</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_revenue__c</fullName>
        <formula>TEXT(100*Allowed_discount_materials__c) &amp;&quot;% &quot;&amp;IMAGE(&quot;/img/samples/rating5.gif&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount, materials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_revenue_equipment_form__c</fullName>
        <formula>Allowed_discount_revenue_equipments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount revenue: equipment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_revenue_equipments__c</fullName>
        <label>Allowed discount revenue: equipment</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_revenue_materials__c</fullName>
        <label>Allowed discount revenue: materials</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allowed_discount_revenue_materials_form__c</fullName>
        <formula>Allowed_discount_revenue_materials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed discount revenue: materials</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field is used in reporting (for Contract history). It is used as a workaround to track approvals in reports &amp; Dashboards</description>
        <inlineHelpText>This field is used in reporting (for Contract history). It is used as a workaround to track approvals in reports &amp; Dashboards</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted for Approval</fullName>
                    <default>true</default>
                    <label>Not Submitted for Approval</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_needed__c</fullName>
        <formula>IF(OR(Approval_percentage_equipment__c &gt; 1, Approval_percentage_materials__c &gt; 1, New_customer__c = true, Sales_Correction__c = true , Correction_of_sales_needed__c = true, General_practitioner__c = true), &quot;Ja&quot;, &quot;Nein&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval needed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_percentage_equipment__c</fullName>
        <formula>IF(Allowed_discount_equipment__c&gt;0, VALUE(TEXT(Contract_discount_equipment_picklist__c))*0.01 / Allowed_discount_equipment__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval percentage, equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_percentage_materials__c</fullName>
        <formula>IF(Allowed_discount_materials__c&gt;0, VALUE(TEXT(Contract_discount_materials_picklist__c))*0.01 / Allowed_discount_materials__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval percentage, materials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Area_manager_DE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area manager (DE)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_UK__c</fullName>
        <description>Use to filter out the right implant system on one-click link for UK. this fields should be temporary as from 2013 the Contract should not be by brand but instead count towards all implant systems - and also be better integrated</description>
        <inlineHelpText>Use to filter out the right implant system on one-click link for UK. this fields should be temporary as from 2013 the Contract should not be by brand but instead count towards all implant systems - and also be better integrated</inlineHelpText>
        <label>Brand (UK)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ankylos</fullName>
                </value>
                <value>
                    <fullName>Astra Tech</fullName>
                </value>
                <value>
                    <fullName>XiVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_UK_temp__c</fullName>
        <description>Use to filter out the right implant system on one-click link for UK. this fields should be temporary as from 2013 the Contract should not be by brand but instead count towards all implant systems - and also be better integrated</description>
        <inlineHelpText>Use to filter out the right implant system on one-click link for UK. this fields should be temporary as from 2013 the Contract should not be by brand but instead count towards all implant systems - and also be better integrated</inlineHelpText>
        <label>Brand (UK-temp)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TFUS-000003033</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractNumberCustom__c</fullName>
        <description>Contract#</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Discount__c</fullName>
        <label>Contract Discount (%)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Model__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>01.5</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>02.5</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>03.5</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>04.5</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>05.5</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>06.5</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>07.5</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>08.5</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>09.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>11.5</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>12.5</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>13.5</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>14.5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Duration_Days__c</fullName>
        <description>Shows how long (in days) the Contract is</description>
        <formula>EndDate - StartDate+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows how long (in days) the Contract is</inlineHelpText>
        <label>Contract Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_Fulfilment__c</fullName>
        <formula>Ordered_Within_Agreement__c / Contract_Value_D__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Fulfilment (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Fulfilment_old__c</fullName>
        <formula>CASE( Contract_Type__c , &quot;STEPPS&quot;,  (Total_Sales_During_Contract_Period__c /  Contract_Value_D__c ), &quot;Purchase Contract - Turnover&quot;,(Total_Sales_During_Contract_Period__c /  Contract_Value_D__c ), &quot;Purchase Contract - Implant Volume&quot;,  (Sold_Implants_During_Contract_Period__c /  Contract_Value_D__c ) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Fulfilment_old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Migrated_from_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, the contract is migrated from SAP. the field will be removed when all migrated contracts are expired</description>
        <inlineHelpText>If this field is checked, the contract is migrated from SAP. the field will be removed when all migrated contracts are expired</inlineHelpText>
        <label>Contract Migrated from SAP? (DE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Model__c</fullName>
        <description>This field shows all pre-approved contract models. If the contract agreement is not pre-approved choose Custom (Needs Management Approval) and add information in the description field.</description>
        <inlineHelpText>This field shows all pre-approved contract models. If the contract agreement is not pre-approved choose Custom (Needs Management Approval) and add information in the description field.</inlineHelpText>
        <label>Contract Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Custom (Add info in special Terms &amp; Discount field)</fullName>
                </value>
                <value>
                    <fullName>65 - 99 Implants (20%)</fullName>
                </value>
                <value>
                    <fullName>100 - 149 Implants (22.5%)</fullName>
                </value>
                <value>
                    <fullName>150 - 199 Implants (25%)</fullName>
                </value>
                <value>
                    <fullName>200 - 299 Implants (27.5%)</fullName>
                </value>
                <value>
                    <fullName>300 - Implants  (30%)</fullName>
                </value>
                <value>
                    <fullName>Surgical Turnover € 20.000 - 30.000 (5%)</fullName>
                </value>
                <value>
                    <fullName>Surgical Turnover € 30.001 - 40.000 (7%)</fullName>
                </value>
                <value>
                    <fullName>Surgical Turnover € 40.001 - 50.000 (9%)</fullName>
                </value>
                <value>
                    <fullName>Surgical Turnover € 50.001 -  (11%)</fullName>
                </value>
                <value>
                    <fullName>STEPPS</fullName>
                </value>
                <value>
                    <fullName>Custom (Needs Management Approval)</fullName>
                </value>
                <value>
                    <fullName>Implant Quantity 65 - 139 (20%)</fullName>
                </value>
                <value>
                    <fullName>Implant Quantity 140 - 299 (25%)</fullName>
                </value>
                <value>
                    <fullName>Implant Quantity 300 -  (30%)</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3103 6511 ANKYLOS Chirurgie Kit manuell AB</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3103-6521 ANKYLOS Chirurgie Kit motor AB</fullName>
                </value>
                <value>
                    <fullName>45 - Implants - Free 3103 6501 ANKYLOS Chirurgie Kit manuell ABC</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3103 6530 ANKYLOS Chirurgie Kit ExpertEase</fullName>
                </value>
                <value>
                    <fullName>40 - Implants - Free 3102 6120 ANKYLOS Prothetik-Kassette, kpl.</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3103 6325 ANKYLOS Kassette BoneCondenser bajonett</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3103 6100 ANKYLOS Freilegungskassette kpl.</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3103 6320 ANKYLOS Kassette BoneCondenser kpl.</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3103 6300 ANKYLOS Kassette BoneExpander kpl.</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3102 6150 Prothetik-Kassette, Standard Aufbausystem</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free 3102 6140 Prothetik-Kassette, Balance Aufbausystem</fullName>
                </value>
                <value>
                    <fullName>45 - Implants - Free Chirurgie Kit</fullName>
                </value>
                <value>
                    <fullName>50 - Implants - Free Facilitate Tray</fullName>
                </value>
                <value>
                    <fullName>30 - Implants - Free Prothetik-Kassette, kpl.</fullName>
                </value>
                <value>
                    <fullName>50 - Implants - Free Osteotome kmpl.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Owner_Country__c</fullName>
        <description>User Country of Owner. Used in validation rules.</description>
        <formula>TEXT(Owner.User_Country__c)</formula>
        <label>Contract Owner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_SBU__c</fullName>
        <description>Used to set for which SBU the contract is valid. Requirements is only to set one SBU since each contract can only be valid for one SBU.</description>
        <inlineHelpText>Enter the SBU valid for this contract</inlineHelpText>
        <label>Contract SBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Size__c</fullName>
        <formula>CASE( Account.Country__c , 
&quot;DE&quot;,TEXT(Contract_Value_D__c),
&quot;CH&quot;,TEXT(Contract_Value_D__c),
TEXT(Contract_Value_D__c) &amp;&quot; &quot;&amp; Contract_Unit__c)</formula>
        <label>Contract Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status_in_the_ERP__c</fullName>
        <label>Contract Status in the ERP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>InProcess</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Response</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>FollowUp</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>ToProcess</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Time_Elapsed__c</fullName>
        <description>Shows how much time has has elapsed in % of total time on Contract</description>
        <formula>IF( TODAY() &gt; EndDate, 1,(TODAY()-StartDate) 
/ 
(EndDate-StartDate))</formula>
        <inlineHelpText>Shows how much time has has elapsed in % of total time on Contract</inlineHelpText>
        <label>Contract Time Elapsed (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Note, be careful when changing these picklist values as workflows rely on them!</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abutment Quantity (Discount)</fullName>
                </value>
                <value>
                    <fullName>Atlantis Abut. and Atlantis Suprastructure</fullName>
                </value>
                <value>
                    <fullName>Implant Quantity (Discount)</fullName>
                </value>
                <value>
                    <fullName>Simplant Voucher</fullName>
                </value>
                <value>
                    <fullName>STEPPS</fullName>
                </value>
                <value>
                    <fullName>Special Contract</fullName>
                </value>
                <value>
                    <fullName>FollowUp Contract</fullName>
                </value>
                <value>
                    <fullName>Installation Contract</fullName>
                </value>
                <value>
                    <fullName>Atlantis Sales</fullName>
                </value>
                <value>
                    <fullName>Lab Sales</fullName>
                </value>
                <value>
                    <fullName>Tier Dentist</fullName>
                </value>
                <value>
                    <fullName>Tier Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Unit__c</fullName>
        <formula>CASE(RecordTypeId, 
&quot;01220000000AKPw&quot; /*STEPPS */,TEXT(CurrencyIsoCode), 
&quot;01220000000AbFX&quot; /*STEPPS 2014*/,&quot;Points&quot;,
&quot;01220000000AKQ6&quot; /* Turnover */,TEXT(CurrencyIsoCode),
&quot;01220000000AuzI&quot; /* Vouchers */, &quot;Items&quot;,
&quot;Items&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Value_D__c</fullName>
        <inlineHelpText>For STEPPS and Purchase Contract - Turnover enter the monetary value of the Contract. For Purchase Contract - Implant Volume, enter the number of Implants covered by the Contract.</inlineHelpText>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_agreed_value__c</fullName>
        <label>Contract agreed value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_discount_equipment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract discount, equipment</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_discount_equipment_picklist__c</fullName>
        <label>Contract discount, equipment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_discount_materials_picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>